# nonebot-plugin-fishing

./: .gitignore  LICENSE  README.md  pyproject.toml
nonebot-plugin-fishing/: __init__.py  config.py  model.py
nonebot_plugin_fishing/: __init__.py  config.py  data_source.py  model.py
nonebot_plugin_fishing/migrations/: 1be1c9b715a9_add_achievements.py  68463f3e5f33_.py  68463f3e5f33_update_version.py  701dd8215883_init_db.py  7609e6d106dd_init_db.py  c5ab992c9af3_add_achievements.py  da5a91612ef2_init_db.py  e9015df43907_add_special_fishes_field.py  f70bdeaec7a4_add_specialfishes_table.py
